# duration-over-threshold

./: .gitignore  README.md  pyproject.toml
samples/batch_example/: batch_example.py
samples/simple_example/: simple_example.py
src/dotmodel/: __init__.py  extract_events.py  model.py  nwis.py  plotting.py  preprocess_time_series.py  usgs_gage.py
